# ParallelOddEvenBubbleSort

./: CMakeLists.txt  clang-format.sh  tests.sh
docs/: PrRaport.odt  sort.ods
inc/: ArgParser.h  Logger.h  ParallelBubbleSort.h  RandomGenerator.h  Timer.h
src/: main.cpp
